--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -4,6 +4,8 @@
   position: sticky;
   top: 50px;
   background-color: rgb(251, 251, 255);
+  border-right: 1px solid #f3f1f6;
+
 }
 
 .sidebarWrapper {
