--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: #555;
+}
+
 .container {
   display: flex;
   /* margin-top: 10px; */
